--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1138,6 +1138,10 @@
     position: absolute; 
     bottom: 60px; 
     right: 73px;
+  } 
+   
+  &__btn-decor{ 
+    display: none;
   }
    
  &__form{  
