--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -21,11 +21,23 @@
         max-width: 1470px; 
         margin: 0 auto; 
         padding: 0 15px;  
-       // border: 1px solid green;  
-        border: 1px solid transparent; 
-       // overflow: hidden;
+        border: 1px solid green;  
+        // border: 1px solid transparent; 
+        overflow: hidden;
     }     
-       
+        
+    .container-no-trimming { 
+      max-width: 1470px; 
+      margin: 0 auto; 
+      padding: 0 15px;  
+     // border: 1px solid green;  
+       border: 1px solid green; 
+    } 
+     
+    
+
+    
+
     .majority-suptitle{     
       @extend %lexend-500; 
       font-size: 14px; 
